// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationIcon renders correctly, by default 1`] = `
<Svg
  height={16}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 23.4 18.4"
  width={16}
  xmlns="http://www.w3.org/2000/svg"
>
  <Rect
    fill="none"
    height="17.3"
    rx={0}
    ry={0}
    stroke="#000"
    strokeLinecap="round"
    strokeLinejoin="round"
    width="22.4"
    x="0.5"
    y="0.5"
  />
  <Polygon
    fill="none"
    points="6.9,9.2 0.5,15.6 0.5,17.9 3.9,17.9 10.4,11.3 22.9,11.3 22.9,7.1 10.4,7.1 3.9,0.5 0.5,0.5 0.5,2.8 6.9,9.2"
    stroke="#000"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
</Svg>
`;

exports[`LocationIcon renders correctly, when modified 1`] = `
<Svg
  height={32}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 23.4 18.4"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <Rect
    fill="none"
    height="17.3"
    rx={0}
    ry={0}
    stroke="#fff"
    strokeLinecap="round"
    strokeLinejoin="round"
    width="22.4"
    x="0.5"
    y="0.5"
  />
  <Polygon
    fill="none"
    points="6.9,9.2 0.5,15.6 0.5,17.9 3.9,17.9 10.4,11.3 22.9,11.3 22.9,7.1 10.4,7.1 3.9,0.5 0.5,0.5 0.5,2.8 6.9,9.2"
    stroke="#fff"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
</Svg>
`;
